# rustydl-from-scratch

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
pytests/: linear_regression.py  py_lr_comparison.py
src/: derivative.rs  derivs_better.rs  lib.rs  linear_regression.rs  main.rs  manual_nn.rs  metrics.rs
