[package]
name = "rust_dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_dl"
crate-type = ["cdylib"]

#[dependencies.pyo3]
#version = "0.7.0-alpha.1"

[dependencies]
pyo3         = { version = "0.21", features = ["extension-module"] }
num-traits   = "0.2"
approx       = "0.5.1" 
rand_distr   = "0.4.3"
rand         = "0.8.5"
ndarray      = {version = "0.15.6", features=["blas"]}
blas-src     = {version = "0.8", features=["openblas"]}
openblas-src = {version = "0.10", features = ["cblas", "system"]}
numpy        = "0.21"


[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
